# aws-rust-cli

./: Cargo.toml
src/: main.rs
