[package]
name = "aws-rust-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.6.0"
aws-sdk-sts = "1.63.0"
dotenvy = "0.15.7"
reqwest = "0.12.15"
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
